# habushu

./: README.md  pom.xml  release-habushu.sh
.github/workflows/: maven.yaml  release.yaml
habushu-maven-plugin/: pom.xml
habushu-maven-plugin/src/main/java/org/technologybrewery/habushu/: AbstractHabushuMojo.java  AbstractValidateMojo.java  BehaveBddTestMojo.java  CacheWheelsMojo.java  CleanHabushuMojo.java  ContainerizeDependenciesMojo.java  ContainerizeDepsMojo.java  InstallDependenciesMojo.java  PublishToPyPiRepoMojo.java  PyenvAndPoetrySetup.java  RetrieveWheelsMojo.java  StageDependenciesMojo.java  ValidatePyenvAndPoetryMojo.java  ValidatePythonSourceMojo.java  ValidatePythonTestMojo.java  WheelDependency.java
habushu-maven-plugin/src/main/resources/: dockerfile_builder_stage_template  dockerfile_final_stage_template  migrations.json
habushu-maven-plugin/src/test/java/org/technologybrewery/habushu/: ContainerizeDependenciesMojoTestCase.java  ContainerizeDependenciesSteps.java  ContainerizeDepsMojoTestWrapper.java  ContainerizeDepsSteps.java  DependencyManagementTestMojo.java  DeployPhaseSteps.java  DeployRetrySteps.java  HabushuMojoTestCase.java  RetrieveWheelsSteps.java  RetrieveWheelsTestMojo.java  StageDependenciesMojoTestCase.java  StageDependenciesSteps.java  TestPublishToPyPiRepoMojo.java  TestRetryPublishToPyPiRepoMojo.java
habushu-maven-plugin/src/test/resources/: base-test-pyproject.toml
habushu-maven-plugin/src/test/resources/containerize-dependencies/default-no-monorepo-dep/test-monorepo/: pom.xml
habushu-maven-plugin/src/test/resources/containerize-dependencies/default-single-monorepo-dep/test-monorepo/foundation/foundation-python-dep-Y/: pom.xml  pyproject.toml
habushu-maven-plugin/src/test/resources/migration/dev-dependencies/: with-dependencies-in-both-groups.toml  with-no-dev-dependencies-group.toml
habushu-maven-plugin/src/test/resources/migration/monorepo/: with-dependencies-in-both-groups.toml  with-dependencies-no-monorepo-group.toml
habushu-maven-plugin/src/test/resources/migration/poetrycore/: with-poetry-core-version-1-5-8.toml  with-poetry-core-version-1-5.toml  with-poetry-core-version-1-6-0.toml  with-poetry-core-version-1-7-0.toml  with-poetry-core-version-2-0-0.toml
habushu-maven-plugin/src/test/resources/specifications/: containerize-dependencies.feature  dependency-management.feature  dev-dependencies-migration.feature  dev-repository-deployment.feature  retrieve-wheels.feature  retry-pypi-push.feature  stage-dependencies.feature
habushu-maven-plugin/src/test/resources/stage-dependencies/default-single-monorepo-dep/test-monorepo/foundation/foundation-sub/foundation-sub-python-dep-Z/: pom.xml  pyproject.toml
habushu-mixology/: pom.xml  pyproject.toml
habushu-mixology-consumer/: pom.xml  pyproject.toml
habushu-mixology-consumer/tests/features/: generate-report-with-manual-tests.feature
habushu-mixology-consumer/tests/features/steps/: generate-report-with-manual-tests.py  unpack_deps.py
habushu-mixology/tests/features/steps/: reference_src.py  reference_test_resources.py  use_environment_variables.py
(+28 files in other folders)
