[tool.poetry]
name = "habushu_mixology_consumer"
version = "2.15.0"
description = "Example of how to use the habushu-maven-plugin to consume other Habushu modules"
authors = ["Eric Konieczny <ekoniec1@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
habushu-mixology = {path = "../habushu-mixology", develop = true}
python = "^3.11"

[tool.poetry.group.dev.dependencies]
kappa-maki = ">=1.0.0"
behave-cucumber-formatter = ">=1.0.1"
pylint = ">=3.1.0"

[tool.poetry.dev-dependencies]
black = ">=24.3.0"
behave = ">=1.2.6"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"


# Added by habushu-maven-plugin at 2024-05-06T17:43:40.714919 to use https://test.pypi.org/simple/ as source PyPi repository for installing dependencies
[[tool.poetry.source]]
name = "dev-pypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
