[tool.poetry]
name = "extensions-python-dep-Z"
version = "1.0.0.dev"
description = "description"
authors = ["author"]
packages = [
    {include = "python_dep_z", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11.4, <4"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
pylint = "^3.2.3"



[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"